# unitflo-evaluation-project-py

./: .gitignore  .mutmut-cache  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  config_evaluation.yml  create_project_structure.sh  evaluate_tests.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
edge_cases/: jira_edge_cases.json
embeddings/: code_embeddings.json
src/: api_client.py  data_processor.py  exceptions.py  model.py  utilities.py  validations.py
src/config/: settings.py
src/data/: data_source.py
src/services/: service_a.py  service_b.py
tests/: test_api_client.py  test_data_processor.py  test_model.py  test_services.py  test_utilities.py  test_validations.py
tests_evaluation/: test_evaluate_tests.py
utils/: llm_utils.py  logger.py
