# setup.cfg
[metadata]
name = unitflo-evaluation-project
version = 1.0.0
description = A project to evaluate LLM-generated unit tests with UFEM
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:
install_requires =
    pandas==1.4.4
    numpy==1.21.6
    requests==2.28.1
    coverage==7.6.1
    mutmut==2.4.1
    pytest==7.1.3
    pytest-cov==4.0.0
    flake8==5.0.4
    pylint==2.14.5
    radon==5.1.0
    openai==0.27.0
    hypothesis==6.54.5
    bandit==1.7.5
    pre-commit==2.20.0

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,venv,env
